--- a/game_page.html
+++ b/game_page.html
@@ -44,7 +44,7 @@
             let table_border = 4;
             let num_grids = 4;
             let last_flipped = false;
-            let set_imgs = ["img_the_scream.jpg", "venus.gif", "00338.jpg", "album.jpg", 'D Rose 3.5 "The Spark".jpg', "pic_bulboff.gif", "pic_bulbon.gif", "Steam.png"];
+            let set_imgs = ["A Sunday on La Grande Jatte _Georges Seurat_1884.jpeg", "Impression, Sunrise_Claude Monet_1872.jpeg", "Self-Portrait_Vincent Van Gogh_1889.jpeg", "Starry Night_Vincent Van Gogh_1889.jpeg", 'The Great War_René Magritte_1964.jpeg', "The Persistence of Memory_Salvador Dalí_1931.jpeg", "The Scream_Edvard Munch_1893.jpg", "The Son of Man_René Magritte_1964.jpeg"];
             let arr_imgs = [];  //[["img_the_scream.jpg", "venus.gif"], ["img_the_scream.jpg", "venus.gif"]];
             let arr_clicked = [];
             let last_img_id = "";
